add new app "car", remove zone change detection and zoneless, adjust routes to new behaviour

--- a/apps/shell/src/app/app.component.html
+++ b/apps/shell/src/app/app.component.html
@@ -1,6 +1,5 @@
 <ul class="remote-menu">
   <li><a routerLink="/">Home</a></li>
-  <li><a routerLink="frontend">Frontend</a></li>
-  <li><a routerLink="tttgame">Tttgame</a></li>
+  <li><a routerLink="car">Self Driving Car</a></li>
 </ul>
 <router-outlet></router-outlet>
